--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -7,6 +7,45 @@
     android:background="#eeeeee"
     tools:context=".ChatActivity">
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_send_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="68dp"
+        android:tint="?attr/colorPrimary"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_image_black_24dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_send_photo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="68dp"
+        android:tint="?attr/colorPrimary"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/fab_send_image"
+        app:srcCompat="@drawable/ic_camera_alt_black_24dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_send_file"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="68dp"
+        android:tint="?attr/colorPrimary"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/fab_send_photo"
+        app:srcCompat="@drawable/ic_insert_drive_file_black_24dp" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_messages"
         android:layout_width="0dp"
@@ -28,23 +67,23 @@
         app:layout_constraintVertical_bias="1.0">
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_send_image"
+            android:id="@+id/fab_send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:tint="?attr/colorPrimary"
             app:fabSize="mini"
-            app:srcCompat="@drawable/ic_image_black_24dp" />
+            app:srcCompat="@drawable/ic_attach_file_black_24dp" />
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/editText_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_toEndOf="@id/fab_send_image"
+            android:layout_marginBottom="8dp"
+            android:layout_toEndOf="@id/fab_send"
             android:background="@drawable/rect_oval_white"
 
             android:hint="@string/send_message_hint"
