barra, sender, size

--- a/app/src/main/res/layout/item_image_message.xml
+++ b/app/src/main/res/layout/item_image_message.xml
@@ -14,21 +14,38 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:background="@drawable/rect_round_primary_color">
+
+        <TextView
+            android:id="@+id/textView_message_image_sender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sender" />
+
         <ImageView
             android:id="@+id/imageView_message_image"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:layout_below="@id/textView_message_image_sender"
             android:scaleType="fitCenter"
             android:adjustViewBounds="true"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:paddingTop="4dp"
             tools:src="@drawable/ic_image_black_24dp" />
+
+        <TextView
+            android:id="@+id/textView_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imageView_message_image"
+            android:layout_alignEnd="@id/imageView_message_image"
+            android:text="Size" />
+
         <TextView
             android:id="@+id/textView_message_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/imageView_message_image"
+            android:layout_below="@id/textView_size"
             android:layout_alignEnd="@id/imageView_message_image"
             android:layout_marginEnd="8dp"
             android:textSize="12sp"
