--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -8,14 +8,20 @@
     tools:context=".ChatActivity">
 
     <ProgressBar
+
+
         android:id="@+id/downloadProgressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="0dp"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="8dp"
+        android:indeterminate="false"
+        android:indeterminateOnly="false"
+        android:maxHeight="24dip"
+        android:minHeight="24dip"
         app:layout_constraintBottom_toBottomOf="@+id/relativeLayout_message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
