--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -9,13 +9,17 @@
 
     <ProgressBar
         android:id="@+id/download_group_ProgressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="0dp"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="8dp"
+        android:indeterminate="false"
+        android:indeterminateOnly="false"
+        android:maxHeight="24dip"
+        android:minHeight="24dip"
         app:layout_constraintBottom_toBottomOf="@+id/relativeLayout_group_message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
