--- a/app/src/main/res/layout/dialog_group_invitation.xml
+++ b/app/src/main/res/layout/dialog_group_invitation.xml
@@ -7,9 +7,9 @@
     >
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/show_message_View"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Acepta la invitación"
+        android:text="Acepta la invitación?"
         android:textSize="24sp" />
 </LinearLayout>
