--- a/app/src/main/res/layout/item_audio_message.xml
+++ b/app/src/main/res/layout/item_audio_message.xml
@@ -14,10 +14,18 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:background="@drawable/rect_round_primary_color">
+
+        <TextView
+            android:id="@+id/textView_message_audio_sender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sender" />
+
         <ImageView
             android:id="@+id/imageView_message_audio"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
+            android:layout_below="@id/textView_message_audio_sender"
             android:scaleType="fitCenter"
             android:adjustViewBounds="true"
             android:paddingStart="8dp"
